--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <title>Document</title>
   </head>
   <body>
-    <p>
+    <p style="color: blue">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum tenetur ea
       dicta, accusantium voluptatem earum distinctio porro corrupti voluptate
       perferendis mollitia quia repellat aliquam hic aut maiores delectus
       quisquam? Praesentium!
     </p>
+
+    <a href="http://www.google.com" target="_blank">google</a>
+    <a href=""></a>
   </body>
 </html>
